Detect default version, add single version test executions