@@ -135,6 +135,42 @@
     </pluginManagement>
     <plugins>
       <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <executions>
+          <execution>
+            <id>yaml-1.1</id>
+            <goals>
+              <goal>test</goal>
+            </goals>
+            <configuration>
+              <systemPropertyVariables>
+                <io.xlate.yamljson.YAML_VERSION>v1.1</io.xlate.yamljson.YAML_VERSION>
+              </systemPropertyVariables>
+              <classpathDependencyExcludes>
+                <classpathDependencyExclude>org.snakeyaml:snakeyaml-engine</classpathDependencyExclude>
+              </classpathDependencyExcludes>
+              <argLine>--add-opens io.xlate.yamljson/io.xlate.yamljson=ALL-UNNAMED --add-modules=org.yaml.snakeyaml ${argLine}</argLine>
+            </configuration>
+          </execution>
+          <execution>
+            <id>yaml-1.2</id>
+            <goals>
+              <goal>test</goal>
+            </goals>
+            <configuration>
+              <systemPropertyVariables>
+                <io.xlate.yamljson.YAML_VERSION>v1.2</io.xlate.yamljson.YAML_VERSION>
+              </systemPropertyVariables>
+              <classpathDependencyExcludes>
+                <classpathDependencyExclude>org.yaml:snakeyaml</classpathDependencyExclude>
+              </classpathDependencyExcludes>
+              <argLine>--add-opens io.xlate.yamljson/io.xlate.yamljson=ALL-UNNAMED --add-modules=org.snakeyaml.engine.v2 ${argLine}</argLine>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
         <groupId>org.jacoco</groupId>
         <artifactId>jacoco-maven-plugin</artifactId>
         <executions>
